web/static/css/responsive.css
/* ... */
/* iPhone Styles */
@media (max-width:480px) {

  #ytvideo,
  #ytvideo2 {
    float: left;
    margin-right: 10px;
    width: 100%;
    height: 170px;
    overflow: hidden;
    position: relative;
    text-align: center;
    background-color: #f6f6f6;
  }
  .nav-collapse {
    -webkit-transform: translate3d(0,0,0);
  }
  .page-header h1 small {
    display: block;
    line-height: 18px;
  }
  input[type="checkbox"],
  input[type="radio"] {
    border: 1px solid #ccc;
  }
  .form-horizontal .control-group > label {
    float: none;
    width: auto;
    padding-top: 0;
    text-align: left;
  }
  .form-horizontal .controls {
    margin-left: 0;
  }
  .form-horizontal .control-list {
    padding-top: 0;
  }
  .form-horizontal .form-actions {
    padding-left: 10px;
    padding-right: 10px;
  }
  .modal {
    position: absolute;
    top: 10px;
    left: 10px;
    right: 10px;
    width: auto;
    margin: 0;
  }
  .modal.fade.in {
    top: auto;
  }
  .modal-header .close {
    padding: 10px;
    margin: -10px;
  }
  .carousel-caption {
    position: static;
  }
  .hardhat {
    display: none;
  }
  #sweet-shit h4 {
    display: none;
  }
  #sweet-shit h3,div.span8.pull-left {
    width: 100%;
  }
  ul.nav.nav-tabs.nav-stacked.span4 {
    margin-left: 0;
    padding-left: 0;
  }
  .brand img {
    top: 15px;
    position: relative;
    float: left;
    width: 150px;
    margin-bottom: 30px;
    margin-left: 10px;
  }
  .col4 {
    width:300px !important;
    text-align: center;
  }
  .col2 {
    width:300px !important;
    text-align: center;

  }
  .col2 img {
    max-width: 300px !important;
    width:  300px !important;
}
#projects-description {
  width: 100%;
  float:left;
}
.col2.head.pull-right {
  width:285px !important;  
  height: 174px !important;
  float: left;
}
.span12 {
  overflow-x: hidden;
}
footer a.contact-label {
  display: none;
}
}
@media (max-width:775px) {
body {
  padding-left: 20px;
  padding-right: 20px;
}
.container-fluid {
  overflow-x: hidden;
  padding-left: 0;
  padding-right: 20px;
}
.navbar-fixed-top {
  margin-left: -20px;
  margin-right: -20px;
}
.container {
  width: auto;
}
.row-fluid {
  width: 100%;
}
.row {
  margin-left: 0;
}
.row > [class*="span"],
.row-fluid > [class*="span"] {/* float:none;*/
  display:block;/* width:auto;*/
  /*margin:0;*/
}
.thumbnails [class*="span"] {
  width: auto;
}
input[class*="span"],
select[class*="span"],
textarea[class*="span"],
.uneditable-input {
  display: block;
  width: 100%;
  min-height: 28px;/* Make inputs at least the height of their button counterpart */
  /* Makes inputs behave like true block-level elements */
  -webkit-box-sizing:border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}
.input-prepend input[class*="span"],
.input-append input[class*="span"] {
  width: auto;
}
div.intro img.bro {
  display: none;
}
p.subhead {
  width: 99%;
}
.span3,.span4,.span7 {
  width: 100% !important;
  margin-left: 3.25% !important;
  margin-bottom: 3% !important;
}
.as-seen-on .span2 img,.as-seen-on .span3 img {
  opacity: 1;
  max-width: 300px;
  margin: 10px 0;
}
#about-subnav {
  width: auto;
  float: none;
  text-align: center;
  position: relative;
}
#switcher-panel {
  position: relative;
  margin: 20px 0 0 0;
}
.row-fluid > .span8 {
  width: 100%;
}
.nav-stacked li {
  float: left;
  margin: 5px 0 5px 2%;
}
.nav-tabs.nav-stacked > li > a,.nav-tabs.nav-stacked > li:first-child > a,.nav-tabs.nav-stacked > li:last-child > a {
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}

}
/* ... */

